src/components/index.scss
@import 'src/styles/sizes';

$player-wrapper-padding: $control-bar-height;

$loading-dot-size: 20px;
$loading-dots-width: 100px;

$error-font-size: 5rem;

.error-wrapper,
.loader-wrapper {
  display: flex;
  height: 100%;
  width: 100%;
}

.player-wrapper {
  box-sizing: border-box;
  display: grid;
  grid-template-areas:
    "navigation-bar content"
    "media content"
    "application content"
    "action-bar content";
  grid-template-columns: 100% auto;
  grid-template-rows: $navigation-bar-height auto auto $action-bar-height;
  height: 100%;
  padding: 0 0 $player-wrapper-padding 0;
  width: 100%;

  .fullscreen-button {
    visibility: hidden;
  }

  .talkers-wrapper {
    visibility: hidden;
  }
}

.hidden-section {
  grid-template-areas:
    "media navigation-bar"
    "media content"
    "application content"
    "application action-bar";
  grid-template-columns: 0% auto;

  .fullscreen-button {
    visibility: visible;
  }

  .talkers-wrapper {
    visibility: visible;
  }
}

.fullscreen-content {
  grid-template-columns: 0% auto;
  grid-template-rows: 0% auto auto 0%;

  .fullscreen-button {
    visibility: visible;
  }

  .talkers-wrapper {
    visibility: visible;
  }
}

.error-code,
.loading-dots {
  margin: auto;
  text-align: center;
}

.error-code {
  color: var(--white);
  font-size: $error-font-size;
  font-weight: var(--font-weight-bold);
}

.loading-dots {
  width: $loading-dots-width;

  div {
    animation: dots 1.4s infinite ease-in-out both;
    background-color: var(--gray);
    border-radius: 100%;
    display: inline-block;
    height: $loading-dot-size;
    margin: $margin-extra-small;
    width: $loading-dot-size;
  }

  .first {
    animation-delay: -0.32s;
  }

  .second {
    animation-delay: -0.16s;
  }

  .third {
    animation-delay: 0s;
  }

  @keyframes dots {
    0%,
    80%,
    100% {
      transform: scale(0);
    }

    40% {
      transform: scale(1);
    }
  }
}

.content {
  background-color: var(--main-background-color);
  display: flex;
  grid-area: content;
  height: 100%;
  position: relative;
  width: 100%;

  .inactive {
    display: none;
  }

  .video-js {
    background-color: var(--main-background-color);
  }

  .button-wrapper {
    .solid {
      &:focus {
        box-shadow: 0 0 0 $margin-extra-small var(--button-box-shadow-color);
      }
    }
  }
}

.swapped-content {
  background-color: var(--section-background-color);
  grid-area: media;

  .video-js {
    background-color: var(--section-background-color);
  }
}

.media {
  background-color: var(--section-background-color);
  display: flex;
  grid-area: media;
  height: 100%;
  width: 100%;

  .video-js {
    background-color: var(--section-background-color);
  }
}

.swapped-media {
  background-color: var(--main-background-color);
  grid-area: content;

  .video-js {
    background-color: var(--main-background-color);
  }

  .button-wrapper {
    .solid {
      &:focus {
        box-shadow: 0 0 0 $margin-extra-small var(--button-box-shadow-color);
      }
    }
  }
}

.application {
  background-color: var(--section-background-color);
  display: flex;
  flex-direction: column;
  grid-area: application;
  height: 100%;
  width: 100%;

  .application-control {
    box-sizing: border-box;
    display: flex;
    flex-direction: row-reverse;
    padding: $padding;

    .application-icon {
      box-sizing: border-box;
      color: var(--gray);
      display: flex;
      font-size: large;
      font-weight: var(--font-weight-semi-bold);
      outline: none;

      [dir="ltr"] & {
        padding-left: $padding;
      }

      [dir="rtl"] & {
        padding-right: $padding;
      }
    }

    .inactive {
      color: var(--gray-light);
      cursor: pointer;
    }
  }
}

.fullscreen-button {
  margin-top: $margin;
  position: fixed;
  z-index: 1;

  [dir="ltr"] & {
    right: 0;
  }

  [dir="rtl"] & {
    left: 0;
  }
}

@media (min-width: $media-min-width) {
  .player-wrapper {
    grid-template-areas:
      "media navigation-bar"
      "media content"
      "application content"
      "application content"
      "application action-bar";
    grid-template-columns: $section-width auto;
    grid-template-rows: $navigation-bar-height $media-fit-height auto auto $action-bar-height;

    .fullscreen-button {
      visibility: visible;
    }

    .talkers-wrapper {
      visibility: visible;
    }
  }

  .hidden-section {
    grid-template-columns: 0% auto;
  }

  .fullscreen-content {
    grid-template-columns: 0% auto;
    grid-template-rows: 0% auto auto auto 0%;
  }

  @media (max-height: $media-max-height) {
    .player-wrapper {
      grid-template-columns: $section-width-small auto;
      grid-template-rows: $navigation-bar-height $media-fit-height-small auto auto $action-bar-height;
    }

    .hidden-section {
      grid-template-columns: 0% auto;
    }

    .fullscreen-content {
      grid-template-columns: 0% auto;
      grid-template-rows: 0% auto auto auto 0%;
    }
  }
}

